// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressBook calls getCoursePermissions when rendered and no permissions are available 1`] = `
<Screen
  drawUnderNavBar={true}
  navBarColor="#fff"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "address-book.cancel",
        "title": "Cancel",
      },
    ]
  }
  title="Address Book Course"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="No results"
        />
      }
      ListHeaderComponent={
        <TypeAheadSearch
          defaultQuery=""
          endpoint="/search/recipients"
          onChangeText={[Function]}
          onNextRequestFinished={[Function]}
          onRequestFinished={[Function]}
          onRequestStarted={[Function]}
          parameters={[Function]}
        />
      }
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReached={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshing={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TypeAheadSearch
            defaultQuery=""
            endpoint="/search/recipients"
            onChangeText={[Function]}
            onNextRequestFinished={[Function]}
            onRequestFinished={[Function]}
            onRequestStarted={[Function]}
            parameters={[Function]}
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 16,
                  },
                  undefined,
                ]
              }
            >
              No results
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`AddressBook doesnt include "All ..." buttons when the send_message is false 1`] = `
<Screen
  drawUnderNavBar={true}
  navBarColor="#fff"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "address-book.cancel",
        "title": "Cancel",
      },
    ]
  }
  title="Address Book Course"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="No results"
        />
      }
      ListHeaderComponent={
        <TypeAheadSearch
          defaultQuery=""
          endpoint="/search/recipients"
          onChangeText={[Function]}
          onNextRequestFinished={[Function]}
          onRequestFinished={[Function]}
          onRequestStarted={[Function]}
          parameters={[Function]}
        />
      }
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReached={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshing={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TypeAheadSearch
            defaultQuery=""
            endpoint="/search/recipients"
            onChangeText={[Function]}
            onNextRequestFinished={[Function]}
            onRequestFinished={[Function]}
            onRequestStarted={[Function]}
            parameters={[Function]}
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 16,
                  },
                  undefined,
                ]
              }
            >
              No results
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`AddressBook doesnt include "All ..." buttons when the send_message_all is false 1`] = `
<Screen
  drawUnderNavBar={true}
  navBarColor="#fff"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "address-book.cancel",
        "title": "Cancel",
      },
    ]
  }
  title="Address Book Course"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="No results"
        />
      }
      ListHeaderComponent={
        <TypeAheadSearch
          defaultQuery=""
          endpoint="/search/recipients"
          onChangeText={[Function]}
          onNextRequestFinished={[Function]}
          onRequestFinished={[Function]}
          onRequestStarted={[Function]}
          parameters={[Function]}
        />
      }
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReached={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshing={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TypeAheadSearch
            defaultQuery=""
            endpoint="/search/recipients"
            onChangeText={[Function]}
            onNextRequestFinished={[Function]}
            onRequestFinished={[Function]}
            onRequestStarted={[Function]}
            parameters={[Function]}
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "height": 100,
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 16,
                  },
                  undefined,
                ]
              }
            >
              No results
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;

exports[`AddressBook renders 1`] = `
<Screen
  drawUnderNavBar={true}
  navBarColor="#fff"
  navBarStyle="light"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "testID": "address-book.cancel",
        "title": "Cancel",
      },
    ]
  }
  title="Address Book Course"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      ListEmptyComponent={
        <ListEmptyComponent
          title="No results"
        />
      }
      ListHeaderComponent={
        <TypeAheadSearch
          defaultQuery=""
          endpoint="/search/recipients"
          onChangeText={[Function]}
          onNextRequestFinished={[Function]}
          onRequestFinished={[Function]}
          onRequestStarted={[Function]}
          parameters={[Function]}
        />
      }
      data={
        Array [
          Object {
            "id": "branch_course_1",
            "name": "All in Address Book Course",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReached={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      refreshing={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <TypeAheadSearch
            defaultQuery=""
            endpoint="/search/recipients"
            onChangeText={[Function]}
            onNextRequestFinished={[Function]}
            onRequestFinished={[Function]}
            onRequestStarted={[Function]}
            parameters={[Function]}
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <Row
            border="both"
            disclosureIndicator={false}
            onPress={[Function]}
            renderImage={[Function]}
            testID="branch_course_1"
            title="All in Address Book Course"
          />
        </View>
      </View>
    </RCTScrollView>
  </View>
</Screen>
`;
